--- a/CSS/projectsCSS.css
+++ b/CSS/projectsCSS.css
@@ -54,10 +54,14 @@ body {
 }
 
 .main-content {
+  max-width: 1200px;
+  margin: 40px auto 0 auto;
+  padding: 20px;
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 .typewriter h1 {
@@ -68,13 +72,13 @@ body {
   overflow: hidden;
   width: 0;
   animation: 
-      typing 3.5s steps(14, end) forwards,
+      typing 3s steps(14, end) forwards,
       blink-caret .5s step-end infinite;
 }
 
 @keyframes typing {
   from { width: 0 }
-  to { width: 14ch }
+  to { width: 11ch }
 }
 
 @keyframes blink-caret {
@@ -84,9 +88,11 @@ body {
 
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); /* wider cards */
   gap: 20px;
-  width: 80%;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
   padding: 20px;
   box-sizing: border-box;
 }
@@ -141,7 +147,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7); /* Transparent sides */
+    background: rgba(0, 0, 0, 0.7); 
     justify-content: center;
     align-items: center;
     z-index: 10;
